# esp32_s3_eye_demo

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  partitions.pico224.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.pico224  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1-pico224
scripts/: embed_web_html.py  flash_espdl_models.py
src/: CMakeLists.txt  banner.cpp  banner.h  board_pins.h  camera.cpp  camera.h  display.cpp  display.h  face_ai.cpp  face_ai.h  idf_component.yml  main.cpp  webserver.cpp  webserver.h  wifi.cpp  wifi.h  wifi_credentials.h  wifi_credentials.h.example
src/fonts/: FreeSans18pt7b.h  FreeSansBold18pt7b.h  gfx_font.h
src/web/: index.html
